membuat fungsi typed js agar berfungsi dengan baik

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="home-content">
         <span>Hi my name is</span>
         <h1>Herudin</h1>
-        <h2>I'm a <span id="typd">Front-end Developer</span></h2>
+        <h2>I'm a <span id="typed"></span></h2>
         <div class="cta-box">
           <a href="#contact" class="cta">Hire me</a>
           <a href="#work" class="cta">See work</a>
@@ -61,8 +61,7 @@
       </div>
     </section>
 
-    <section id="about" style="hei
-    1000px"></section>
+    <section id="about" style="height: 1000px"></section>
 
     <script src="assets/js/script.js"></script>
   </body>
