--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </nav>
     </header>
 
+    <!-- home -->
     <section class="home" id="home">
       <div class="home-content">
         <span>Hi my name is</span>
@@ -59,9 +60,144 @@
           <a href="#work" class="cta">See work</a>
         </div>
       </div>
+      <!-- <div class="home-image">
+        <img src="assets/images/astro.svg" alt="#">
+      </div> -->
     </section>
 
-    <section id="about" style="height: 1000px"></section>
+    <!-- about -->
+    <section class="about" id="about">
+      <div class="title-section">
+        <h1>About me</h1>
+      </div>
+      <div class="about-container">
+
+      
+      <div class="about-content">
+        <p>Hello, I'm Herudin, a junior frontend developer with a great passion for technology, particularly in web development. I'm always enthusiastic about learning the latest technology and creating creative solutions to tackle challenges in the world of web development.</p>
+         <!-- <p>
+          I have experience in developing websites using HTML, CSS, and JavaScript. I also have design skills, albeit still in the learning phase, that can help create an attractive and intuitive user experience.
+        </p>
+        <p>
+          I'm always open to learning and expanding my knowledge in the field of web development. If you have challenging projects or challenges, I would be happy to help you achieve your goals with innovative and effective solutions.</p> -->
+        <p>Here are the skill I learned:</p>
+        <div class="about-skill">
+          <div class="skill">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </div>
+          <div class="skill">
+            <li>Bootstrap 5 (Basic)</li>
+            <li>NodeJS (Basic)</li>
+            <li>Python (Basic)</li>
+          </div>
+        </div>
+      </div>
+      <div class="about-image">
+        <img src="assets/images/chaeyoung.png" alt="">
+      </div>
+    </div>
+    </section>
+
+    <!-- recent work -->
+    <section class="work" id="work">
+      <div class="title-section">
+        <h1>Recent Works</h1>
+      </div>
+      <div class="work-content">
+        <div class="work-box">
+          <img src="assets/images/chaeyoung.png" alt="#">
+          <div class="overlay">
+            <h5>Avo Log</h5>
+            <p>Avolog adalah tampilan halaman login dan daftar yang dibuat dengan HTML, CSS, dan JavaScript</p>
+            <div class="overlay-footer">
+              <span>10 Jan 2022</span>
+              <a href="#" class='bx bx-right-arrow-alt'></a>
+            </div>
+          </div>
+        </div>
+        <div class="work-box">
+          <img src="assets/images/chaeyoung.png" alt="#">
+          <div class="overlay">
+            <h5>Avo Log</h5>
+            <p>Avolog adalah tampilan halaman login dan daftar yang dibuat dengan HTML, CSS, dan JavaScript</p>
+            <div class="overlay-footer">
+              <span>10 Jan 2022</span>
+              <a href="#" class='bx bx-right-arrow-alt'></a>
+            </div>
+          </div>
+        </div>
+        <div class="work-box">
+          <img src="assets/images/chaeyoung.png" alt="#">
+          <div class="overlay">
+            <h5>Avo Log</h5>
+            <p>Avolog adalah tampilan halaman login dan daftar yang dibuat dengan HTML, CSS, dan JavaScript</p>
+            <div class="overlay-footer">
+              <span>10 Jan 2022</span>
+              <a href="#" class='bx bx-right-arrow-alt'></a>
+            </div>
+          </div>
+          </div>
+        <div class="work-box">
+          <img src="assets/images/chaeyoung.png" alt="#">
+          <div class="overlay">
+            <h5>Avo Log</h5>
+            <p>Avolog adalah tampilan halaman login dan daftar yang dibuat dengan HTML, CSS, dan JavaScript</p>
+            <div class="overlay-footer">
+              <span>10 Jan 2022</span>
+              <a href="#" class='bx bx-right-arrow-alt'></a>
+            </div>
+          </div>
+          </div>
+        <div class="work-box">
+          <img src="assets/images/chaeyoung.png" alt="#">
+          <div class="overlay">
+            <h5>Avo Log</h5>
+            <p>Avolog adalah tampilan halaman login dan daftar yang dibuat dengan HTML, CSS, dan JavaScript</p>
+            <div class="overlay-footer">
+              <span>10 Jan 2022</span>
+              <a href="#" class='bx bx-right-arrow-alt'></a>
+            </div>
+          </div>
+          </div>
+        <div class="work-box">
+          <img src="assets/images/chaeyoung.png" alt="#">
+          <div class="overlay">
+            <h5>Avo Log</h5>
+            <p>Avolog adalah tampilan halaman login dan daftar yang dibuat dengan HTML, CSS, dan JavaScript</p>
+            <div class="overlay-footer">
+              <span>10 Jan 2022</span>
+              <a href="#" class='bx bx-right-arrow-alt'></a>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact me -->
+    <section class="contact" id="contact">
+      <div class="title-section">
+        <h1>Contact Me</h1>
+      </div>
+      <div class="contact-content">
+        <div class="contact-box">
+        <h3>Send a message to me</h3>
+        <p>I'm always ready to receive your message and ready to help you hire or contract me for any project.</p>
+        <a href="#" class="cta">Say Hi</a>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <span>&copy; 2022 Vienze. All rights reserved.</span>
+      <div class="social-media">
+        <a href="#" class="bx bxl-facebook-square"></a>
+        <a href="#" class="bx bxl-github"></a>
+        <a href="#" class="bx bxl-instagram"></a>
+      </div>
+    </footer>
 
     <script src="assets/js/script.js"></script>
   </body>
